--- a/foci/paper.tex
+++ b/foci/paper.tex
@@ -14,8 +14,7 @@
 \date{}
 
 %make title bold and 14 pt font (Latex default is non-bold, 16 pt)
-\title{\Large \bf Data Without Borders: Protecting
-User Data in a Borderless Internet}
+\title{\Large \bf Data Without Borders: Protecting Data Across National Boundaries}
 
 %for single author (just remove % characters)
 %\author{
