--- a/oakland/security.tex
+++ b/oakland/security.tex
@@ -1,4 +1,13 @@
 \section{Security Analysis}
 \label{sec:sec}
-
 \annie{Fill me in with a security analysis/evaluation.}
+
+{\bf Malicious Client(s).}
+
+{\bf Popularity Attack.}
+
+{\bf Traffic Correlation Attack.}
+
+{\bf Flashcrowds.}
+
+{\bf Censorship.}
