--- a/oakland/sigproc.bib
+++ b/oakland/sigproc.bib
@@ -228,6 +228,48 @@
   howpublished = {\url{https://techcrunch.com/2017/03/23/credo-and-cloudflare-argue-against-national-security-letter-gag-orders/}},
 }
 
+@misc{facebook_surv,
+  title = "{How the NSA \& FBI made Facebook the perfect mass surveillance tool.}",
+  key = "{how}",
+  howpublished = {\url{https://venturebeat.com/2014/05/15/how-the-nsa-fbi-made-facebook-the-perfect-mass-surveillance-tool/}}
+}
+
+@misc{nytimes_hatespeech,
+  title = "{Delete Hate Speech or Pay Up, Germany Tells Social Media Companies}",
+  key = "{delete}",
+  howpublished = {\url{https://www.nytimes.com/2017/06/30/business/germany-facebook-google-twitter.html}}
+}
+
+@misc{medium_sesta,
+  title = "{Balancing Child Protection and Digital Rights}",
+  key = "{balancing}",
+  howpublished = {\url{https://medium.com/@jmalcolm/balancing-child-protection-and-digital-rights-1b9c4ab0b93f}}
+}
+
+@misc{medium_copyright,
+  title = "{Content Delivery Networks Aren’t Notorious Markets}",
+  key = "{content}",
+  howpublished = {\url{https://medium.com/niskanen-center/content-delivery-networks-arent-notorious-markets-2a448a549cf7}}
+}
+
+@misc{eff_copyright,
+  title = "{Content Delivery Networks (CDNs)}",
+  key = "{content}",
+  howpublished = {\url{https://www.eff.org/free-speech-weak-link/cdn}}
+}
+
+@misc{stack_copyright,
+  title = "{District court rules against Cloudflare in anti-piracy suit}",
+  key = "{district}",
+  howpublished = {\url{https://thestack.com/security/2017/03/29/district-court-rules-against-cloudflare-in-anti-piracy-suit/}}
+}
+
+@misc{techdirt_copyright,
+  title = "{Court Says RIAA Can Just Tell Cloudflare Any Site Is A Grooveshark Clone... And Cloudflare Has 48 Hours To Dump Them}",
+  key = "{}",
+  howpublished = {\url{https://www.techdirt.com/articles/20151214/17392833079/court-says-riaa-can-just-tell-cloudflare-any-site-is-grooveshark-clone-cloudflare-has-48-hours-to-dump-them.shtml}}
+}
+
 @inproceedings{krishnamurthy2001use,
   title={On the Use and Performance of Content Distribution Networks},
   author={Krishnamurthy, Balachander and Wills, Craig and Zhang, Yin},
