--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -75,6 +75,9 @@ outside the CDN, know the old obfuscated content, so an attacker cannot update t
 a legitimate publisher.  The publisher must present the old obfuscated content to the CDN in order to also push 
 her new obfuscated content to the CDN. 
 
+\paragraph{Updating Keys}
+\annie{fill me in}
+
 \subsection{Retrieving Content}
 The steps taken for an end-user to retrieve a web page that has been cached by \system{} are shown in Figure \ref{fig:retrieving}.  
 The end-user must first configure her browser to use an \system{}-designated proxy, meaning a proxy that is a part of the system, but not controlled by the 
