--- a/oakland/related_work.tex
+++ b/oakland/related_work.tex
@@ -1,7 +1,7 @@
 \section{Related Work}
 \label{sec:related}
 
-\annie{Do a new lit search for any recent papers that may be related, such as \cite{xiao2017personalized}.}
+\annie{Do a new lit search for any recent papers that may be related, such as \cite{xiao2017personalized,gupta2016scalable}.}
 
 To our knowledge, there has been no prior work on preventing surveillance at CDNs, but there 
 has been relevant research on securing CDNs, finding security vulnerabilities in CDNs, and 
