--- a/oakland/sigproc.bib
+++ b/oakland/sigproc.bib
@@ -9,7 +9,13 @@
   publisher={IEEE Press}
 }
 
-
+@inproceedings{gupta2016scalable,
+  title={Scalable and Private Media Consumption with Popcorn.},
+  author={Gupta, Trinabh and Crooks, Natacha and Mulhern, Whitney and Setty, Srinath TV and Alvisi, Lorenzo and Walfish, Michael},
+  booktitle={NSDI},
+  pages={91--107},
+  year={2016}
+}
 
 @article{xue2017cdns,
   title={{CDNs} Meet {CN}: An Empirical Study of {CDN} Deployments in China},
