--- a/oakland/threat_model.tex
+++ b/oakland/threat_model.tex
@@ -48,9 +48,9 @@ and we further discuss our design decisions in Section \ref{sec:design}.
  \hline\hline
  Prevent CDN from knowing information & (1) encrypt content   \\ 
   (Section \ref{sec:obfuscate_content})                          & (2) obfuscate URL \\ \hline
- Closed system of proxies & (1) decouple content distribution from decision of trust via proxies  \\ 
-  (Section \ref{sec:proxies})  & \\ \hline
- Key use and management & (1) $n$ shared keys, for $1 < n < |proxies|$ \\ 
+ System of proxies & (1) decouple content distribution from decision of trust via proxies  \\ 
+  (Section \ref{sec:proxies})  & (2) hiding client identities \\ \hline
+ Key use and management & (1) key churn \\ 
    (Section \ref{sec:keys})                     & (2) secrecy in URL obfuscation \\ 
  \hline
 \end{tabular}
@@ -68,7 +68,7 @@ does not know what content it is caching, who is requesting it, or who has creat
 inside attacker will not be able to learn valuable information, and the CDN will not be able to supply 
 a government adversary with the requested data.
 
-\paragraph{Closed system of proxies} There have been many legal battles over which government is allowed access 
+\paragraph{System of proxies} There have been many legal battles over which government is allowed access 
 to which data; for example, data can be stored in Country X, but belonging to an organization in Country Y, and 
 the data is about a person in Country Z.  It is unclear which of these countries can legally demand 
 the data with a subpoena or warrant.  The issue becomes much more complex when the specific laws 
@@ -82,9 +82,8 @@ has been ordered to comply with the warrant, despite the data requested, emails,
   To complement these legal battles, \system{} should take 
 these conflicting jurisdictional issues into account.  Additionally, the system should be able to protect 
 the privacy of clients' locations; while addressing data privacy concerns in the client's jurisdiction, \system{} 
-should not reveal more information about clients.  It also provides the ability for clients 
-to hide their fine-grained location, while still following the policies of the jurisdictions in which 
-they reside.
+should not reveal more information about clients.  It should also provide the ability for clients 
+to hide their location and make their requests unlinkable to their identity.
 
 \paragraph{Key use and management} \system{} should be able to achieve the previously mentioned security 
 and privacy goals while not introducing new attacks.  More specifically, \system{} should maintain the 
